# tt-metal-magna

./: .clang-format-ignore  .clang-tidy  .gitignore  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  GETTING_STARTED.md  INSTALLING.md  MAGNA_GETTING_STARTED.md  README.md  build_metal.sh  create_venv_gstreamer.sh  get_hang.sh  hf_tt_test.py  hosts.txt  lraspp.py  mbv2.py  pyproject.toml  run.sh  run_matmul_err.sh  runs
tt_metal/: CMakeLists.txt  host_api.hpp  sfpi-version.sh  tt_metal.cpp
tt_metal/api/tt-metalium/: bos_utils.hpp  buffer.hpp  control_plane.hpp  dev_msgs.h  device.hpp  device_impl.hpp  erisc_datamover_builder.hpp  fabric_edm_packet_header.hpp  hal_types.hpp  mesh_command_queue.hpp  mesh_device.hpp  mesh_graph.hpp  program.hpp  routing_table_generator.hpp  system_memory_manager.hpp
tt_metal/common/: CMakeLists.txt  bfloat16.hpp  core_coord.cpp  core_coord.hpp  core_descriptor.cpp  test_tiles.hpp
tt_metal/core_descriptors/: wormhole_b0_80_arch_unharvested_column_dispatch.yaml  wormhole_b0_80_arch_unharvested_eth_dispatch.yaml
tt_metal/distributed/: fd_mesh_command_queue.cpp  fd_mesh_command_queue.hpp  mesh_device.cpp  mesh_device.hpp  mesh_workload.cpp  mesh_workload_utils.cpp  system_mesh.cpp
tt_metal/examples/: CMakeLists.txt
tt_metal/examples/hello_world_compute_kernel/: CMakeLists.txt
tt_metal/fabric/: CMakeLists.txt  control_plane.cpp  erisc_datamover_builder.cpp  fabric.cpp  mesh_graph.cpp
tt_metal/fabric/mesh_graph_descriptors/: dual_galaxy_mesh_graph_descriptor.yaml
tt_metal/hostdevcommon/: dprint_common.h
tt_metal/hw/: CMakeLists.txt
tt_metal/hw/firmware/: CMakeLists.txt
tt_metal/hw/inc/: dataflow_api.h  firmware_common.h  mod_div_lib.h
tt_metal/hw/toolchain/: main.ld  memory.ld  ncrisc-halt-wormhole.S  sections.ld
tt_metal/impl/: CMakeLists.txt
tt_metal/impl/allocator/: allocator.cpp  allocator_types.hpp  bank_manager.cpp  l1_banking_allocator.cpp
tt_metal/impl/buffers/: buffer.cpp  buffer.hpp  circular_buffer_types.hpp
tt_metal/impl/debug/: dprint_server.cpp  watcher_device_reader.cpp  watcher_server.cpp  watcher_server.hpp
tt_metal/impl/device/: device.cpp  device.hpp  device_pool.cpp  dispatch.cpp
tt_metal/impl/dispatch/: command_queue.cpp  command_queue.hpp  command_queue_interface.hpp  data_collection.cpp  data_collection.hpp  debug_tools.cpp  device_command.cpp  device_command.hpp  device_command_calculator.hpp  dispatch_mem_map.cpp  hardware_command_queue.cpp  hardware_command_queue.hpp  host_runtime_commands.cpp  ringbuffer_cache.cpp  ringbuffer_cache.hpp  (+2 more)
tt_metal/include/: compute_kernel_api.h
tt_metal/jit_build/: build.cpp  build.hpp  data_format.cpp  data_format.hpp  genfiles.cpp  hlk_desc.hpp  settings.cpp
tt_metal/llrt/: core_descriptor.cpp  hal.cpp  hal.hpp  hal_asserts.hpp  llrt.cpp  llrt.hpp  rtoptions.cpp  rtoptions.hpp  tt_cluster.cpp  tt_cluster.hpp  tt_elffile.cpp  tt_memory.cpp
tt_metal/programming_examples/: CMakeLists.txt
tt_metal/soc_descriptors/: blackhole_140_arch.yaml
tt_metal/test/: CMakeLists.txt
tt_metal/tools/: CMakeLists.txt
tt_metal/tt_stl/: CMakeLists.txt
(+775 files in other folders)
